--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fontsource/material-icons": "^4.5.4",
         "@fontsource/material-icons-outlined": "^4.5.4",
         "@fontsource/roboto": "^4.5.7",
+        "axios": "^0.27.2",
         "vue": "^3.2.37",
         "vue-router": "^4.0.13"
     },
