--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
         "@types/node": "^18.0.6",
+        "@types/spotify-api": "^0.0.17",
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.7",
         "postcss": "^8.4.14",
